# SilliReminder

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  SECURITY.md  build.rs
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: README.md
docs/: INSTRUCTIONS_EN.md  INSTRUCTIONS_PL.md
installer/innosetup/: README.md  SilliReminder.iss
scripts/: install.ps1  uninstall.ps1
src/: app.rs  autostart.rs  db_operations.rs  debug_log.rs  i18n.rs  icons.rs  main.rs  paths.rs  settings.rs  tray.rs
src/autostart/: windows.rs
src/db_operations/: connection.rs  delete.rs  insert.rs  path.rs  queries.rs  schema.rs  types.rs  update.rs
src/tray/: win32.rs
src/widgets/: date_picker_pl.rs  mod.rs
