[package]
name = "SilliReminder"
version = "0.1.0"
authors = ["Jakub Konieczny"]
edition = "2024"
license = "MIT"

[dependencies]
eframe = "0.33.3"
chrono = "0.4"
raw-window-handle = "0.6"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = "1.0.228"
serde_derive = "1.0.228"
sys-locale = "0.3"
winreg = "0.55.0"
windows = { version = "0.62.2", features = [
	"Win32_Foundation",
	"Win32_System_LibraryLoader",
	"Win32_UI_Shell",
	"Win32_UI_WindowsAndMessaging",
	"Win32_Graphics_Gdi",
] }
egui_extras = { version = "0.33.3", features = ["chrono"] }

[build-dependencies]
winres = "0.1.12"
